Fixing the spacing on the detailed view.

--- a/public/css/detailed.css
+++ b/public/css/detailed.css
@@ -6,7 +6,7 @@
 .pHeader {
     font-size:30px;
     font-weight: bold;
-    margin-right:100px;
+    margin-right:50px;
     margin-left: -80px;
     display: inline-block;
 }
